--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Perfume Zone Chittagong</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="PerfumeZoneChittagong.jpg" type="image/icon type">
 </head>
 <body>
     <header>
@@ -49,7 +50,7 @@
         <div class="contact-info">
             <p>Address: 2nd floor, SAFA AMIN Parade corner, Chawkbazar, Chittagong</p>
             <p>Phone: +880 1835-199322</p>
-            <p>Email: info@perfumezonechittagong.com</p>
+            <p>Email: perfumezone982@gmail.com</p>
         </div>
         <div class="contact-form">
             <h3>DROP A MESSAGE</h3>
